--- a/src/main/resources/templates/user/dashboard.html
+++ b/src/main/resources/templates/user/dashboard.html
@@ -22,7 +22,7 @@
     </div>
 
     <!--logo start-->
-    <a href="dashboard.html" class="logo">Viatorem <span class="lite">Travel</span></a>
+    <a href="/" class="logo">Viatores <span class="lite">Travel</span></a>
     <!--logo end-->
 
     <div class="top-nav notification-row">
@@ -33,7 +33,7 @@
         <li class="dropdown">
           <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                           <span class="profile-ava">
-                              <img alt="" src="img/avatar1_small.jpg"/>
+                              <!--<img alt="" src="img/avatar1_small.jpg"/>-->
                           </span>
             <span th:text="${user.username}"></span>
             <b class="caret"></b>
@@ -61,12 +61,6 @@
     <div id="sidebar" class="nav-collapse ">
       <!-- sidebar menu start-->
       <ul class="sidebar-menu">
-        <li class="active">
-          <a class="" href="/dashboard">
-            <i class="icon_house_alt"></i>
-            <span>Dashboard</span>
-          </a>
-        </li>
         <li>
           <a href="/profile">
             <i class="icon_profile"></i>
@@ -168,8 +162,6 @@
         <div class="col-lg-12">
           <div class="profile-widget profile-widget-info">
             <div class="panel-body">
-
-
             </div>
           </div>
         </div>
