--- a/src/main/resources/templates/user/dashboard.html
+++ b/src/main/resources/templates/user/dashboard.html
@@ -15,7 +15,7 @@
 <!-- container section start -->
 <section id="container" class="">
 
-
+  <!--header-->
   <header class="header dark-bg">
     <div class="toggle-nav">
       <div class="icon-reorder tooltips" data-original-title="Toggle Navigation" data-placement="bottom"><i class="icon_menu"></i></div>
@@ -53,10 +53,7 @@
       <!-- notificatoin dropdown end-->
     </div>
   </header>
-  <!--header end-->
-
-
-  <!--sidebar start-->
+  <!--sidebar-->
   <aside>
     <div id="sidebar" class="nav-collapse ">
       <!-- sidebar menu start-->
@@ -78,9 +75,6 @@
       <!-- sidebar menu end-->
     </div>
   </aside>
-  <!--sidebar end-->
-
-
   <!--main content start-->
   <section id="main-content">
     <section class="wrapper">
@@ -153,10 +147,6 @@
 
         </div>
       </div>
-
-
-
-
       <div class="row">
         <!-- profile-widget -->
         <div class="col-lg-12">
@@ -202,12 +192,17 @@
               <div class="tab-content">
                 <div id="recent-activity" class="tab-pane active">
                   <div class="container">
-                    <form action="">
-                      <label for="reminder">
-                        <input type="text" class="textarea" id="reminder" placeholder="trip reminders"/>
-                      </label>
-
-
+                    <form th:action="@{/dashboard}" method="post" th:object="${reminder}">
+                        <select th:field="*{category}">
+                          <option value="Flight">Flight</option>
+                          <option value="Hotel">Hotel</option>
+                          <option value="Car">Car</option>
+                          <option value="Attraction">Attraction</option>
+                        </select>
+                        <input th:field="*{action}" type="text" class="textarea" placeholder="What is this reminder for?"/>
+                        <span>Select a date and time for the reminder</span>
+                        <input th:field="*{date}" type="datetime-local" />
+                      <button type="submit" class="btn btn-primary">Create Reminder</button>
                     </form>
                   </div>
                 </div>
