--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -144,35 +144,35 @@
                   <div id="profile" class="tab-pane active">
                     <section class="panel">
                       <div class="bio-graph-heading">
-                        Hello I’m Jenifer Smith, a leading expert in interactive and creative design specializing in the mobile medium. My graduation from Massey University with a Bachelor of Design majoring in visual communication.
+                        Hello <span th:text="${user.username}"></span>
                       </div>
                       <div class="panel-body bio-graph-info">
                         <h1>Bio Graph</h1>
                         <div class="row">
                           <div class="bio-row">
-                            <p><span>First Name </span>: Jenifer </p>
+                            <p>Username: <span th:text="${user.username}"></span> </p>
+                          </div>
+                          <!--<div class="bio-row">-->
+                            <!--<p><span>Last Name </span>: Smith</p>-->
+                          <!--</div>-->
+                          <!--<div class="bio-row">-->
+                            <!--<p><span>Birthday</span>: 27 August 1987</p>-->
+                          <!--</div>-->
+                          <!--<div class="bio-row">-->
+                            <!--<p><span>Country </span>: United</p>-->
+                          <!--</div>-->
+                          <!--<div class="bio-row">-->
+                            <!--<p><span>Occupation </span>: UI Designer</p>-->
+                          <!--</div>-->
+                          <div class="bio-row">
+                            <p>Email :<span th:text="${user.email}"></span></p>
                           </div>
                           <div class="bio-row">
-                            <p><span>Last Name </span>: Smith</p>
+                            <p>Mobile : <span th:text="${user.phonenumber}"> </span></p>
                           </div>
-                          <div class="bio-row">
-                            <p><span>Birthday</span>: 27 August 1987</p>
-                          </div>
-                          <div class="bio-row">
-                            <p><span>Country </span>: United</p>
-                          </div>
-                          <div class="bio-row">
-                            <p><span>Occupation </span>: UI Designer</p>
-                          </div>
-                          <div class="bio-row">
-                            <p><span>Email </span>:jenifer@mailname.com</p>
-                          </div>
-                          <div class="bio-row">
-                            <p><span>Mobile </span>: (+6283) 456 789</p>
-                          </div>
-                          <div class="bio-row">
-                            <p><span>Phone </span>: (+021) 956 789123</p>
-                          </div>
+                          <!--<div class="bio-row">-->
+                            <!--<p><span>Phone </span>: (+021) 956 789123</p>-->
+                          <!--</div>-->
                         </div>
                       </div>
                     </section>
@@ -186,66 +186,47 @@
                     <section class="panel">
                       <div class="panel-body bio-graph-info">
                         <h1> Profile Info</h1>
-                        <form class="form-horizontal" role="form">
+                        <form th:action="@{/profile}" method="post" th:object="${user}" class="needs-validation" th:novalidate="novalidate">
                           <div class="form-group">
-                            <label class="col-lg-2 control-label">First Name</label>
+                            <label for="username" class="col-lg-2 control-label">Enter the new username</label>
                             <div class="col-lg-6">
-                              <input type="text" class="form-control" id="f-name" placeholder=" "/>
+                              <input th:field="*{username}" type="text" class="form-control" id="username" />
                             </div>
                           </div>
                           <div class="form-group">
-                            <label class="col-lg-2 control-label">Last Name</label>
+                            <label for="email" class="col-lg-2 control-label">Enter the new email</label>
                             <div class="col-lg-6">
-                              <input type="text" class="form-control" id="l-name" placeholder=" "/>
-                            </div>
+                              <input th:field="*{email}" type="text" class="form-control" id="email"  />
+                          </div>
                           </div>
                           <div class="form-group">
-                            <label class="col-lg-2 control-label">About Me</label>
-                            <div class="col-lg-10">
-                              <textarea name="" id="" class="form-control" cols="30" rows="5"></textarea>
-                            </div>
-                          </div>
-                          <div class="form-group">
-                            <label class="col-lg-2 control-label">Country</label>
+                            <label for="phoneNumber" class="col-lg-2 control-label">Enter the new phone number</label>
                             <div class="col-lg-6">
-                              <input type="text" class="form-control" id="c-name" placeholder=" "/>
+                              <input th:field="*{phonenumber}" type="text" class="form-control" id="phoneNumber" placeholder=" "/>
                             </div>
                           </div>
-                          <div class="form-group">
-                            <label class="col-lg-2 control-label">Birthday</label>
-                            <div class="col-lg-6">
-                              <input type="text" class="form-control" id="b-day" placeholder=" "/>
+                            <div class="form-group">
+                                <label for="password" class="col-lg-2 control-label">Enter the new phone number</label>
+                                <div class="col-lg-6">
+                                    <input th:field="*{password}" type="password" class="form-control" id="password" placeholder=" "/>
+                                </div>
                             </div>
-                          </div>
-                          <div class="form-group">
-                            <label class="col-lg-2 control-label">Occupation</label>
-                            <div class="col-lg-6">
-                              <input type="text" class="form-control" id="occupation" placeholder=" "/>
+                            <!--inputs fro the new password-->
+                            <div class="form-group">
+                                <label for="new_password" class="col-lg-2 control-label">Enter the new phone number</label>
+                                <div class="col-lg-6">
+                                    <input name="newPassword" type="password" class="form-control" id="new_password" placeholder=" "/>
+                                </div>
                             </div>
-                          </div>
-                          <div class="form-group">
-                            <label class="col-lg-2 control-label">Email</label>
-                            <div class="col-lg-6">
-                              <input type="text" class="form-control" id="email" placeholder=" "/>
+                            <div class="form-group">
+                                <label  for="confirm_new_password"  class="col-lg-2 control-label">Enter the new phone number</label>
+                                <div class="col-lg-6">
+                                    <input name="confirmNewPassword" type="password" class="form-control" id="confirm_new_password" placeholder=" "/>
+                                </div>
                             </div>
-                          </div>
-                          <div class="form-group">
-                            <label class="col-lg-2 control-label">Mobile</label>
-                            <div class="col-lg-6">
-                              <input type="text" class="form-control" id="mobile" placeholder=" "/>
-                            </div>
-                          </div>
-                          <div class="form-group">
-                            <label class="col-lg-2 control-label">Website URL</label>
-                            <div class="col-lg-6">
-                              <input type="text" class="form-control" id="url" placeholder="http://www.demowebsite.com "/>
-                            </div>
-                          </div>
-
                           <div class="form-group">
                             <div class="col-lg-offset-2 col-lg-10">
-                              <button type="submit" class="btn btn-primary">Save</button>
-                              <button type="button" class="btn btn-danger">Cancel</button>
+                              <button type="submit" class="btn btn-primary">Update</button>
                             </div>
                           </div>
                         </form>
