--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,6 +1,4 @@
-.ui-autocomplete-loading {
-    background: white url("https://images.pexels.com/photos/1191548/pexels-photo-1191548.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=350") right center no-repeat;
-}
+
 #city { width: 25em; }
 
 #travel-bg{
@@ -31,4 +29,10 @@
     border: black solid 1px;
     margin: 20px;
 
+}
+.logo{
+    width: 20vh;
+    height: 10vh;
+    padding-right: -20px;
+    margin-right: -20px;
 }
