--- a/src/main/resources/templates/search/home.html
+++ b/src/main/resources/templates/search/home.html
@@ -100,28 +100,29 @@
                             <ul class="nav nav-tabs">
                                 <li class="active">
                                     <a data-toggle="tab" href="#flights">
-                                        <i class="icon-home"></i>
                                         Find Flights!
+                                        <i class="fa fa-plane"></i>
                                     </a>
                                 </li>
                                 <li>
                                     <a data-toggle="tab" href="#hotel">
                                         <i class="icon-user"></i>
                                         Find hotels
+                                        <i class="fa fa-building"></i>
                                     </a>
                                 </li>
                                 <li class="">
                                     <a data-toggle="tab" href="#rental">
-                                        <i class="icon-envelope"></i>
                                         Find car rentals
+                                        <i class="fa fa-map-marker"></i>
                                     </a>
                                 </li>
-                                <li class="">
-                                    <a data-toggle="tab" href="#entertainment">
-                                        <i class="icon-envelope"></i>
-                                        Find entertainment
-                                    </a>
-                                </li>
+                                <!--<li class="">-->
+                                    <!--<a data-toggle="tab" href="#entertainment">-->
+                                        <!--<i class="icon-envelope"></i>-->
+                                        <!--Find entertainment-->
+                                    <!--</a>-->
+                                <!--</li>-->
                             </ul>
                         </header>
                         <div class="panel-body">
@@ -211,17 +212,18 @@
                                                     </div>
                                                     <div id="collapseOne" class="panel-collapse collapse in ">
                                                         <div class="panel-body">
-                                                            <div class="container">
-                                                                <table class="table table-striped table-advance table-hover container col-lg-12">
+                                                            <div class="container row">
+                                                                <table class="table table-striped table-advance table-hover container-fluid col-lg-12">
                                                                     <tbody id="flight">
                                                                     <tr>
-                                                                        <th><i class="fa fa-building-o"></i> Flight Number</th>
-                                                                        <th><i class="icon_pin_alt"></i> Operating  Airline</th>
-                                                                        <th><i class="icon_mobile"></i> Departs at</th>
-                                                                        <th><i class="fa fa-money"></i> Arrives at</th>
-                                                                        <th><i class="fa fa-money"></i> Duration</th>
-                                                                        <th><i class="icon_tool"></i> Tax</th>
-                                                                        <th><i class="icon_tool"></i> Total fare</th>
+                                                                        <th>flight #</th>
+                                                                        <th>Departure  <i class="icon_clock"></i></th>
+                                                                        <th>Duration <i class="icon_clock_alt"></i></th>
+                                                                        <th>flight #</th>
+                                                                        <th>Return  <i class="icon_clock"></i></th>
+                                                                        <th> Duration<i class="icon_clock_alt"></i></th>
+                                                                        <th>Price <i class="fa fa-money"></i></th>
+                                                                        <th class="text-center">Airline<i class="fa fa-plane"></i></th>
                                                                     </tr>
                                                                     </tbody>
                                                                 </table>
@@ -246,7 +248,7 @@
                                         <h1>Look for a hotel near your area!</h1>
                                         <form class="needs-validation" th:novalidate="novalidate" >
                                             <div class="form-row">
-                                                <div class="col-md-4 mb-3">
+                                                <div class="col-md-4 mb-3" style="display: none">
                                                     <label for="destination">Select Destination</label>
                                                     <input  type="text" id="hotelDestination" class=" form-control" placeholder="Where are you going?" th:required="required" />
                                                     <div class="invalid-feedback">
@@ -298,17 +300,17 @@
                                                     <div id="collapseTwo" class="panel-collapse collapse in ">
                                                         <div class="panel-body">
                                                             <div class="container">
-                                                                <table class="table table-striped table-advance table-hover container col-lg-12">
+                                                                <table class="table table-striped table-advance table-hover container-fluid col-lg-12">
                                                                     <tbody id="hotels">
                                                                     <tr>
-                                                                        <th><i class="icon_datareport"></i> Name</th>
-                                                                        <th><i class="icon_calendar"></i> Address</th>
-                                                                        <th><i class="icon_calendar"></i> Contact</th>
-                                                                        <th><i class="icon_calendar"></i> Price</th>
-                                                                        <th><i class="icon_cogs"></i>Action</th>
+                                                                        <th>Name <i class="fa fa-user"></i></th>
+                                                                        <th>Address  <i class="fa fa-map-marker"></i></th>
+                                                                        <th>Contact <i class="fa fa-mobile"></i></th>
+                                                                        <th>Estimated Price  <i class="fa fa-money"></i></th>
                                                                     </tr>
                                                                     </tbody>
                                                                 </table>
+
                                                             </div>
                                                         </div>
                                                     </div>
@@ -327,7 +329,7 @@
                                         <h1>Rent a car be ahead of the game!</h1>
                                         <form th:action="@{/search/home}" method="post" th:object="${search}" class="needs-validation" th:novalidate="novalidate" >
                                             <div class="form-row">
-                                                <div class="col-md-4 mb-3">
+                                                <div class="col-md-4 mb-3" style="display: none">
                                                     <label for="destination">Destination</label>
                                                     <input th:field="*{destination}" type="text" id="rentalLocation" class=" form-control" placeholder="Where are you going?" th:required="required" />
                                                     <div class="invalid-feedback">
@@ -377,31 +379,13 @@
                                                     <div id="collapseThree" class="panel-collapse collapse in ">
                                                         <div class="panel-body">
                                                             <div class="container">
-                                                                <table class="table table-striped table-advance table-hover container col-lg-12">
+                                                                <table class="table table-striped table-advance table-hover container-fluid col-lg-12">
                                                                     <tbody id="cars">
                                                                     <tr>
-                                                                        <th><i class="icon_datareport"></i> Destination</th>
-                                                                        <th><i class="icon_calendar"></i> Check in</th>
-                                                                        <th><i class="icon_calendar"></i> Check out</th>
-                                                                        <th><i class="icon_calendar"></i> price</th>
-                                                                        <th><i class="icon_cogs"></i>Action</th>
+                                                                        <th>Name <i class="fa fa-user "></i> </th>
+                                                                        <th>Address <i class="fa fa-map-marker"></i> </th>
+                                                                        <th>Estimated price  <i class="fa fa-money"></i></th>
                                                                     </tr>
-
-
-                                                                    <tr>
-                                                                        <td>dest</td>
-                                                                        <td>12/12/2018</td>
-                                                                        <td>01/20/2018</td>
-                                                                        <td>$$$$$$</td>
-                                                                        <td>
-                                                                            <div class="btn-group">
-                                                                                <a class="btn btn-success" href="#"><i class="icon_check_alt2"></i></a>
-                                                                                <a class="btn btn-danger" href="#"><i class="icon_close_alt2"></i></a>
-                                                                            </div>
-                                                                        </td>
-                                                                    </tr>
-
-
 
                                                                     </tbody>
                                                                 </table>
@@ -417,28 +401,7 @@
                                     </div>
 
                                 </div>
-                                <div id="entertainment" class="tab-pane">
-                                    <form class="needs-validation" th:novalidate="novalidate">
-                                        <div class="form-row">
-                                            <div class="col-md-4 mb-3">
-                                                <label for="destination">Destination</label>
-                                                <input  type="text" id="poi-loc" class=" form-control" placeholder="airport code?" th:required="required" />
-                                                <div class="invalid-feedback">
-                                                    Invalid entry
-                                                </div>
 
-                                            </div>
-                                        </div>
-                                        <button id="ent" type="button" class="btn btn-primary" >Search enter!</button>
-
-
-                                    </form>
-
-
-                                    <div id="poiMap"></div>
-
-                                    <div id="poiPosts"></div>
-                                </div>
                             </div>
                         </div>
                     </section>
