--- a/src/main/resources/templates/user/dashboard.html
+++ b/src/main/resources/templates/user/dashboard.html
@@ -140,15 +140,75 @@
                       <td><span th:text="${search.children}"></span></td>
                       <td>
                         <div class="btn-group">
-                          <a class="btn btn-primary" href="#"><i class="icon_plus_alt2"></i></a>
+                          <a class="btn btn-primary editSavedSearch"><i class="icon_plus_alt2"></i></a>
                           <a class="btn btn-success" href="#"><i class="icon_check_alt2"></i></a>
                           <a class="btn btn-danger" href="#"><i class="icon_close_alt2"></i></a>
                         </div>
                       </td>
                     </tr>
-
                     </tbody>
                   </table>
+                    <!--for to edit the search-->
+                    <h1>Edit Search</h1>
+                    <form th:action="@{search/edit}" method="post" th:object="${search}" class="needs-validation" th:novalidate="novalidate">
+                      <div class="form-row">
+                        <div class="col-md-4 mb-3">
+                          <label for="origin">Select Origin</label>
+                          <input th:field="${search.origin}" type="text" id="origin" class="airports form-control" aria-describedby="emailHelp" placeholder="Choose a starting location" th:required="required"/>
+                          <div class="invalid-feedback">
+                            Invalid entry
+                          </div>
+                        </div>
+                        <div class="col-md-4 mb-3">
+                          <label for="destination">Select Destination</label>
+                          <input th:field="${search.destination}" type="text" id="destination" class="airports form-control" placeholder="Choose an end point" th:required="required" />
+                          <div class="invalid-feedback">
+                            Invalid entry
+                          </div>
+                        </div>
+                      </div>
+                      <div class="form-row">
+                        <div class="col-md-3 mb-3">
+                          <label for="departure">Departure Date</label>
+                          <input th:field="${search.start_date}" type="date" id="departure" class="form-control" aria-describedby="emailHelp" placeholder="Select a departure date" th:required="required"/>
+                          <div class="invalid-feedback">
+                            Invalid entry
+                          </div>
+                        </div>
+                        <div class="col-md-3 mb-3">
+                          <label for="returnDate">Return Date</label>
+                          <input th:field="${search.end_date}" type="date" id="returnDate" class="form-control"  placeholder="Select a return date" th:required="required"/>
+                          <div class="invalid-feedback">
+                            Invalid entry
+                          </div>
+                        </div>
+                        <div class="col-md-3 mb-3">
+                          <label for="children">Children</label>
+                          <input th:field="${search.children}" type="number" id="children" class="form-control"  placeholder="1" th:required="required"/>
+                          <div class="invalid-feedback">
+                            Invalid entry
+                          </div>
+                        </div>
+                        <div class="col-md-3 mb-3">
+                          <label for="adults">Adults</label>
+                          <input th:field="${search.adults}" type="number" id="adults" class="form-control"  placeholder="1" th:required="required"/>
+                          <div class="invalid-feedback">
+                            Invalid entry
+                          </div>
+                        </div>
+                      </div>
+                      <div class="form-row">
+                        <div class="col-md-4 mb-3">
+                          <label for="price">name a price</label>
+                          <input th:field="${search.price}" type="text" id="price" class="form-control"  placeholder="0.00" th:required="required"/>
+                          <div class="invalid-feedback">
+                            Invalid entry
+                          </div>
+                        </div>
+                      </div>
+                      <button id="lowFlight" type="button" class="btn btn-primary">Search flights!</button>
+                      <button type="submit" class="btn btn-primary">Save changes</button>
+                    </form>
                   </div>
                 </div>
               </div>
@@ -159,17 +219,11 @@
 
         </div>
       </div>
-
-
-
-
       <div class="row">
         <!-- profile-widget -->
         <div class="col-lg-12">
           <div class="profile-widget profile-widget-info">
             <div class="panel-body">
-
-
             </div>
           </div>
         </div>
