Changed css to a few different pages. Fixed navbar/sidebar to be uniform across different pages

--- a/src/main/resources/templates/search/home.html
+++ b/src/main/resources/templates/search/home.html
@@ -83,7 +83,7 @@
                                 </li>
                                 <li>
                                     <a href="https://github.com/JNR-Capstone-Project/travelcapstone">
-                                        <i class="icon_profile"></i>
+                                        <img src="../../static/img/Github.png"/>
                                         <span>Documentation</span>
                                     </a>
                                 </li>
