--- a/src/main/resources/templates/user/registration.html
+++ b/src/main/resources/templates/user/registration.html
@@ -14,10 +14,10 @@
 <body id="travel-bg">
 <div class="container">
 
-    <h1 class="text-center mt-5 pt-5">This is how joining us would help you MANAGE your trip </h1>
-    <p class="text-center">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab deleniti ea libero officiis, tempore voluptas. Autem ducimus expedita id in incidunt libero necessitatibus recusandae. Asperiores delectus natus nisi possimus quasi!
-        </p>
+    <!--<h1 class="text-center mt-5 pt-5">This is how joining us would help you MANAGE your trip </h1>-->
+    <!--<p class="text-center">-->
+        <!--Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab deleniti ea libero officiis, tempore voluptas. Autem ducimus expedita id in incidunt libero necessitatibus recusandae. Asperiores delectus natus nisi possimus quasi!-->
+        <!--</p>-->
 </div>
 <div class="container">
 
