--- a/src/main/resources/templates/search/home.html
+++ b/src/main/resources/templates/search/home.html
@@ -83,7 +83,7 @@
                                 </li>
                                 <li>
                                     <a href="https://github.com/JNR-Capstone-Project/travelcapstone">
-                                        <img src="../../static/img/Github.png"/>
+                                        <img src="../../static/Github.png" />
                                         <span>Documentation</span>
                                     </a>
                                 </li>
